--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css?family=Anaheim');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/*
+anaheim
+assistant
+athiti
+
+*/
+
+html {
+    font-size: 16px;
+    font-family: 'Anaheim', 'Assistant', 'Athiti', sans-serif;
 }
